[project]
name = "biometric-normalizer"
version = "0.1.0"
description = "Device-agnostic biometric normalization for perinatal health agents"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Repository = "https://github.com/jsfaulkner86/perinatal-companion-agent"
